# health-data

docs/: PRD_REVIEW.md  (+2 more)
sam-content-ingest/: .gitattributes  .gitignore  README.md  pyproject.toml
sam-content-ingest/config/: aging_home_safety.yaml  condition_explainer.yaml  household_readiness.yaml  medication.yaml  travel_health.yaml  visit_prep.yaml
sam-content-ingest/config/visit_prep_static/: ahrq_10_questions.yaml
sam-content-ingest/local_capture/ready_gov/: README.md
sam-content-ingest/sam_ingest/: __init__.py
sam-content-ingest/sam_ingest/adapters/: base.py  cdc_pages.py  cdc_syndication.py  dailymed.py  gov_pages.py  medlineplus.py  ready_gov.py  state_gov.py
sam-content-ingest/sam_ingest/core/: cache.py  chunk.py  cli.py  countries.py  http.py  pipeline.py  schema.py  sink.py  state.py
sam-content-ingest/sam_ingest/extractors/: __init__.py  _cdc_common.py  _gov_common.py  _state_common.py  aging_home_safety.py  base.py  condition_explainer.py  household_readiness.py  medication.py  travel_health.py  visit_prep.py
sam-content-ingest/tests/: test_cdc.py  test_dailymed.py  test_gov_pages.py  test_medlineplus.py  test_pipeline.py  test_ready_gov.py  test_schema.py  test_state_gov.py  test_visit_prep.py
sam-content-ingest/tests/fixtures/cdc/: falls_prevention.html  media_search.json  syndicate_steadi.html
sam-content-ingest/tests/fixtures/dailymed/: spl_lisinopril.xml  spls_ibuprofen.json
sam-content-ingest/tests/fixtures/medlineplus/: ws_diabetes.xml  ws_high_blood_pressure.xml
sam-content-ingest/tests/fixtures/ready_gov/: hurricanes.html
(+2 files in other folders)
